completed delete friend route, fixed mui icon alignment

--- a/src/components/Discover/Discover.css
+++ b/src/components/Discover/Discover.css
@@ -33,6 +33,7 @@
 .friend-icon {
   position: relative;
   color: whitesmoke;
+  padding-right: 5px;
 }
 
 .friend-username {
@@ -43,8 +44,16 @@
   position: absolute;
   top: 0.25em;
   left: 0.25em;
+  display: inline-flex;
+  vertical-align: middle;
+  flex-wrap: wrap;
   text-align: left;
   filter: drop-shadow(1px 1px 2px black);
+}
+
+.break {
+  flex-basis: 100%;
+  height: 3px;
 }
 
 .discover-title {
