--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -20,6 +20,7 @@
   justify-content: center;
   align-content: space-around;
   height: 70%;
+  width: 94%;
   margin: 3%;
 }
 
